# RPTranslate

./: .gitignore  README.md  config_template.py  pyproject.toml
booktrans/: clear.py  concat.py  const.py  explore.py  file_converter.py  prepare.py  replace.py  script.py  translate.py  utils.py
booktrans/scripts/: clear.py  concat.py  explore.py  fromdocx.py  full.py  replace_after.py  replace_before.py  todocx.py  toepub.py  translate.py
concat/: concat.bash  concat.txt  concat_converted.txt  dump.json  dump.txt
example/: RuneProfessor.txt  clear.txt  clear_dump.json  concat.txt  config.py  explore_dump.json  replace_before.txt
original/: 00373.txt  00374.txt  00375.txt  00376.txt  00377.txt  00378.txt  00379.txt  00380.txt  00381.txt  00382.txt  00383.txt  00384.txt  00385.txt  00386.txt  00387.txt  00388.txt  00389.txt  00390.txt  00391.txt  00392.txt  00393.txt  00394.txt  00395.txt  00396.txt  00397.txt  00398.txt  00399.txt  00400.txt  00401.txt  00402.txt  00403.txt  00404.txt  00405.txt  00406.txt  00407.txt  00408.txt  00409.txt  00410.txt  00411.txt  00412.txt  (+163 more)
yandex_translate/: convert.py  dump.json  translate.txt  translate_converted.txt
yandex_translate/split/: 365.txt  366.txt  367.txt  368.txt  369.txt  370.txt  371.txt  372.txt  373.txt  374.txt  375.txt  376.txt  377.txt  378.txt  379.txt  380.txt  381.txt  382.txt  383.txt  384.txt  385.txt  386.txt  387.txt  388.txt  389.txt  390.txt  391.txt  392.txt  393.txt  394.txt  395.txt  396.txt  397.txt  398.txt  399.txt  400.txt  401.txt  402.txt  403.txt  404.txt  (+163 more)
